# pytoolconfig

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: pre-commit.yml  python-publish.yml  test.yml  tox.yml  type.yml
docs/: .readthedocs.yaml  api.rst  command_line.rst  conf.py  documentation.rst  global_configuration.rst  index.rst  pydantic.rst  universal_config.rst
pytoolconfig/: __init__.py  _version.py  documentation.py  fields.py  pytoolconfig.py  types.py  universal_config.py  utils.py
pytoolconfig/sources/: __init__.py  ini.py  pyproject.py  pytool.py  setup_cfg.py  source.py
src/: universal_config.py
src/pytoolconfig/: __init__.py  _version.py  documentation.py  fields.py  pytoolconfig.py  types.py  universal_config.py  utils.py
src/pytoolconfig/sources/: __init__.py  ini.py  pyproject.py  pytool.py  setup_cfg.py  source.py
tests/: conftest.py  test_config.ini  test_config.py  test_documentation.py  test_enum.py  test_pytoolconfig.py  test_utils.py
tests/configfiles/: pyproject.toml  setup.cfg  test_config.ini  test_documentation.md  test_documentation_ini.md
