[project]
name = "pytoolconfig"
dynamic = ["version"]
description = 'Python tool configuration'
license = { text = 'LGPL-3.0-or-later' }
dependencies = ["tomli>=2.0.1; python_version < \"3.11\"", "packaging>=22.0"]
requires-python = '>=3.8'
readme = "README.md"

[[project.authors]]
name = 'bageljr'
email = 'bageljr897@protonmail.com'

[project.urls]
Homepage = 'https://github.com/bageljrkhanofemus/pytoolconfig'

[project.optional-dependencies]
validation = ['pydantic>=1.7.4']
global = ['platformdirs>=1.4.4']
doc = ['tabulate>=0.8.9', 'sphinx>=4.5.0']
gendocs = [
  'sphinx>=4.5.0',
  'sphinx-autodoc-typehints>=1.18.1',
  'sphinx-rtd-theme>=1.0.0',
  'pytoolconfig[doc]',
]
[tool.pdm]
version = { source = "scm" }

[tool.pdm.dev-dependencies]
dev = [
  "pytest>=7.2.0",
  "mypy>=0.991",
  "types-tabulate>=0.9.0.2",
  "tox>=4.0.8",
  "tox-pdm>=0.6.0",
  "types-docutils>=0.19.1.9",
  "tox-gh>=1.0.0",
  "pytest-emoji>=0.2.0",
  "pytest-md>=0.2.0",
  "pydantic>=2.3.0",
]

[tool.pytoolconfig]
formatter = 'black'
[tool.pytest.ini_options]
testpaths = ['tests']

[tool.isort]
profile = 'black'

[tool.ruff]
select = ["ALL"]
ignore = [
  "FBT",
  "D211",
  "ANN101",
  "ANN102",
  "ANN401",
  "S101",
  "D212",
  "D213",
  "TCH001",
  "TCH002",
  "TCH003",
  "SLF001",
  "FA100",
]
# Always generate Python 3.7-compatible code.
target-version = "py38"
force-exclude = true
[tool.ruff.per-file-ignores]
"tests/**" = ["D", "ANN201", "ANN001"]
"docs/conf.py" = ["INP001"]
[tool.ruff.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".
[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["pytoolconfig.field"]
[tool.tox]
legacy_tox_ini = '''
[tox]
min_version = 4.0
envlist = py38, py39, py310, py311, py312
isolated_build = True

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312
[testenv]
groups = dev, doc, global
commands = pytest
'''
[tool.pylint.format]
max-line-length = "88"

[tool.mypy]
plugins = 'pydantic.mypy'
# strict = true

[build-system]
requires = ['pdm-backend>=1.0.5']
build-backend = 'pdm.backend'
