[project]
name = "pytoolconfig"
dynamic = ["version"]
description = 'Python tool configuration'
license = { text = 'LGPL-3.0-or-later' }
dependencies = ["tomli>=2.0.1; python_version < \"3.11\"", "packaging>=23.2"]
requires-python = '>=3.8'
readme = "README.md"

[[project.authors]]
name = 'bageljr'
email = 'bageljr897@protonmail.com'

[project.urls]
Homepage = 'https://github.com/bageljrkhanofemus/pytoolconfig'

[project.optional-dependencies]
validation = ["pydantic>=2.5.3"]
global = ["platformdirs>=3.11.0"]
doc = ["tabulate>=0.9.0", "sphinx>=7.1.2"]
gendocs = [
  "sphinx>=7.1.2",
  "sphinx-autodoc-typehints>=1.25.2",
  "sphinx-rtd-theme>=2.0.0",
  "pytoolconfig[doc]",
]
[tool.pdm]
version = { source = "scm" }

[tool.pdm.dev-dependencies]
dev = [
  "pytest>=7.4.4",
  "mypy>=1.8.0",
  "types-tabulate>=0.9.0.20240106",
  "tox>=4.11.4",
  "tox-pdm>=0.7.2",
  "types-docutils>=0.20.0.20240106",
  "tox-gh>=1.3.1",
  "pytest-emoji>=0.2.0",
  "pytest-md>=0.2.0",
  "pydantic>=2.5.3",
]

[tool.pytoolconfig]
formatter = 'black'
[tool.pytest.ini_options]
testpaths = ['tests']

[tool.isort]
profile = 'black'

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
  "FBT",
  "D211",
  "ANN101",
  "ANN102",
  "ANN401",
  "S101",
  "D212",
  "D213",
  "TCH001",
  "TCH002",
  "TCH003",
  "SLF001",
  "FA100",
]
# Always generate Python 3.8-compatible code.
target-version = "py38"
force-exclude = true
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN201", "ANN001"]
"docs/conf.py" = ["INP001"]
[tool.ruff.lint.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["pytoolconfig.field"]
[tool.tox]
legacy_tox_ini = '''
[tox]
min_version = 4.0
envlist = py38, py39, py310, py311, py312
isolated_build = True

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312
[testenv]
groups = dev, doc, global
commands = pytest
'''
[tool.pylint.format]
max-line-length = "88"

[tool.mypy]
plugins = 'pydantic.mypy'
exclude = ['docs']
# strict = true

[build-system]
requires = ['pdm-backend>=1.0.5']
build-backend = 'pdm.backend'
